# dateiter-py

./: README.md  pyproject.toml
.github/workflows/: publish-docker.yml
dateiter/: __init__.py  __main__.py
tests/: test_app.py  test_dateiter.py
