[tool.poetry]
name = "dateiter"
version = "1.2.1"
description = ""
authors = ["yassun7010 <yassun7010@outlook.com>"]
readme = "README.md"

[tool.poetry.scripts]
dateiter = "dateiter.__main__:main"

[tool.taskipy.tasks]
test = "pytest"
format = "black ."
lint = "pyright dateiter/** tests/**"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.0.284,<0.2.2"
black = ">=23.7,<25.0"
isort = "^5.12.0"
pytest = ">=7.4,<9.0"
pyright = "^1.1.322"
taskipy = "^1.12.0"
ipython = "^8.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
